--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="./dist/css/styles.css">
-  <script type="text/javascript" src="./dist/scripts/scripts.min.js"></script>
+  <script defer type="text/javascript" src="./dist/scripts/scripts.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 
