added a print button, which will print the current state of the calendar to the console

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <section class="cal-container">
     <section class="cal-left" id="cal-left">
       <div id="fixed-pallette" class="fixed-pallette">
+        <p id="print">print</p>
 
       </div>
     </section>
